# boost-di-example

./: .gitignore  CMakeLists.txt  LICENSE  async_result.h  conanfile.txt  default.nix
di/: CMakeLists.txt  di_example.cpp  executer.cpp  executer.h  group.cpp  group.h  logger.h  manager.cpp  manager.h  mocks.h  test_di.cpp  test_executer.cpp  test_group.cpp  test_manager.cpp  test_product.cpp
legacy/: CMakeLists.txt  async_result.h  executer.cpp  executer.h  group.cpp  group.h  manager.cpp  test_async_result.cpp  test_boost_asio.cpp  test_executer.cpp  test_group.cpp  test_manager.cpp
